--- a/css/main_pf.css
+++ b/css/main_pf.css
@@ -331,7 +331,7 @@ header h1 {
   }
 
   #hero_container section {
-    padding: 0 .5em .5em;
+    padding: 0 .5em .5em 0;
     -webkit-box-flex: 0;
     -webkit-flex: 0 1 auto;
     -moz-box-flex: 0;
@@ -360,6 +360,10 @@ header h1 {
     margin-top: 0;
   }
 
+  #hero_container p {
+    margin-left: 1em;
+  }
+
   #prime_content {
     padding: 0 .5em .5em;
     display: -webkit-box;
@@ -382,29 +386,44 @@ header h1 {
     -ms-flex-pack: justify;
     justify-content: space-between;
     /*width:30%;
-        width: calc(45% - 1em);*/
-    margin-right: 1em;
+        width: calc(45% - 1em);
+        margin-right:1em;*/
     -webkit-align-self: stretch;
     -ms-flex-item-align: stretch;
     align-self: stretch;
     background: #fff;
     border-left: solid 1px #999;
+    background: peachpuff;
   }
 
   /*
     This is a hack to get around FF's lack of support for flex-wrap see http://caniuse.com/#search=flex notes section for more info.
     */
 
-  .no-flexbox #prime_content article {
-    width: -webkit-calc(50% - 1em);
-    width: -moz-calc(50% - 1em);
-    width: calc(50% - 1em);
+  .no-flexbox #prime_content {
+    display: block;
   }
+
+  .no-flexbox #prime_content article {
+    width: -webkit-calc(50% - 1.5em);
+    width: -moz-calc(50% - 1.5em);
+    width: calc(50% - 1.5em);
+    float: left;
+    /*background: rgba(56,134,64,.8);*/
+    margin-right: 1.5em;
+  }
+
+  .no-flexbox #prime_content article:nth-child(even) {
+    margin-right: 0;
+    margin-left: 1.5em;
+  }
+
+  /* End of FF hack */
 
   #prime_content h2 {
     margin: 0;
     font-size: .875em;
-    border-bottom: solid 2px #333;
+    border-bottom: solid 2px #393939;
     color: #999;
   }
 
@@ -431,6 +450,15 @@ header h1 {
     align-self: stretch;
     background: #fff;
     border-left: solid 1px #999;
+  }
+
+  #secondary_content {
+    background: yellowgreen;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
